welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: ';' expected but ',' found.
  faireFleurDuo(Color.RED),Color.CYAN)
                          ^